--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
     "superagent": "^3.5.2",
+    "svg-loader": "0.0.2",
     "webpack": "^2.5.1"
   },
   "dependencies": {
